# parler

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SPEC.md  TESTING.md  agents.md  pyproject.toml  test-decisions.md
.codex/skills/: _index.md  fixture-generation.md  rendering-and-export.md
.github/workflows/: ci.yml  phase8-verification.yml
parler/: __init__.py  cli.py  config.py  doctor.py  e2e.py  errors.py  models.py  roster.py  runlog.py
parler/audio/: ffmpeg.py  ingester.py
parler/export/: __init__.py  jira.py  linear.py  notion.py  result.py  slack.py
parler/extraction/: cache.py  extractor.py  parser.py
parler/local/: voxtral.py
parler/pipeline/: __init__.py  orchestrator.py  state.py
parler/rendering/: __init__.py  renderer.py
parler/transcription/: cache.py  transcriber.py
parler/tui/: __init__.py  app.py  app.tcss
parler/util/: __init__.py  env.py  hashing.py  language.py  serialization.py
rfcs/: README.md  RFC-0001-architecture-and-pipeline.md  RFC-0002-voxtral-multilingual-transcription.md  RFC-0003-decision-extraction-schema.md  RFC-0004-speaker-attribution.md  RFC-0005-report-format-and-export.md
tests/: README.md  check_coverage_baselines.py
tests/benchmarks/: README.md  baseline.json  update_baseline.py
tests/fixtures/: README.md  bilingual_meeting_5min.mp3.script.txt  earnings_call_45min.mp3.script.txt  fr_meeting_5min.mp3.script.txt  generate_fixtures.py  record_extraction.py  record_voxtral.py
tests/fixtures/audio/: voxpopuli_fr_20200527_plenary_clips.md
tests/fixtures/decision_logs/: bilingual_expected.json
tests/integration/: test_mistral_extraction.py  test_voxtral_integration.py
tests/unit/: test_audio_ingestion.py  test_cli_commands.py  test_config_loading.py  test_deadline_resolution.py  test_deadline_resolution_parametrized.py  test_decision_extraction_parsing.py  test_e2e_runner.py  test_ffmpeg_version.py  test_pipeline_config_compat.py  test_pipeline_orchestration.py  test_tui_app.py
