[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project]
name = "parler"
version = "0.1.0"
description = "Meeting intelligence: multilingual transcription, decision extraction, and report generation"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["mistral", "voxtral", "transcription", "meeting", "nlp"]
authors = [{ name = "Abdel", email = "abdel@noreply.github.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mistralai>=1.0.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "textual>=8.2.3",
    "jinja2>=3.1",
    "PyYAML>=6.0.2",
    "requests>=2.32.0",
    "tomli>=2.0; python_version < '3.11'",
    "python-dateutil>=2.8",
    "click>=8.1",
]

[project.urls]
Homepage = "https://github.com/AbdelStark/parler"
Repository = "https://github.com/AbdelStark/parler"
Issues = "https://github.com/AbdelStark/parler/issues"
Changelog = "https://github.com/AbdelStark/parler/blob/main/CHANGELOG.md"

[dependency-groups]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",      # parallel test execution
    "pytest-bdd>=7.0",        # BDD / Gherkin
    "pytest-asyncio>=0.23",   # async tests
    "pytest-benchmark>=4.0",  # performance benchmarks
    "pytest-httpx>=0.35.0",
    "hypothesis>=6.100",      # property-based testing
    "freezegun>=1.4",         # deterministic time in tests
    "jsonschema>=4.0",        # schema validation for export/E2E tests
    "respx>=0.20",            # HTTP mock for httpx
    "responses>=0.25.0",      # HTTP mock for requests
    "factory-boy>=3.3",       # fixture factories
    "gTTS>=2.5.4",            # synthetic audio fixture generation
]
lint = [
    "ruff>=0.4",              # linting
]
typing = [
    "mypy>=1.9",              # type checking
    "pyright>=1.1",           # type checking (strict)
    "types-python-dateutil>=2.9.0.20240316",
    "types-PyYAML>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
]
quality = [
    "mutmut>=2.4",            # mutation testing
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
    { include-group = "typing" },
    { include-group = "quality" },
]

[project.optional-dependencies]
diarize = [
    "pyannote.audio>=3.1",   # speaker diarisation (optional)
]

[project.scripts]
parler = "parler.cli:main"
parler-e2e = "parler.e2e:main"
parler-tui = "parler.tui:main"

[tool.uv]
default-groups = ["dev"]

[tool.uv.build-backend]
module-root = ""

# ─── pytest ──────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "features"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Custom markers — must be declared here to avoid PytestUnknownMarkWarning
markers = [
    "slow: marks tests as slow (real API calls) — deselect with -m 'not slow'",
    "smoke: critical path tests, always run in CI",
    "fr: French-language specific tests",
    "multilingual: tests requiring multilingual logic",
    "benchmark: performance benchmark tests",
    "property: property-based tests (Hypothesis)",
    "integration: tests that mock external APIs",
    "e2e: end-to-end tests against real APIs",
    "unit: pure function tests, no I/O",
]

# Default: run unit + integration, exclude slow E2E and benchmarks
addopts = [
    "--strict-markers",          # fail if unknown marker used
    "--strict-config",           # fail on config warnings
    "-ra",                       # show short test summary for all except passed
    "--tb=short",                # shorter tracebacks
    "--import-mode=importlib",   # reliable imports without __init__.py games
]

# asyncio mode for async tests
asyncio_mode = "auto"

# ─── Coverage ────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["parler"]
branch = true
omit = [
    "parler/__main__.py",
    "tests/*",
    "features/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1

[tool.coverage.paths]
source = ["parler", "*/site-packages/parler"]

# Per-module coverage baselines are enforced in CI via
# tests/check_coverage_baselines.py against coverage.json.
# The values there are non-regression floors for the currently tested slice.
# parler.audio.ingester:          line=95, branch=90
# parler.transcription.*:         line=90, branch=85
# parler.extraction.extractor:    line=95, branch=90
# parler.extraction.deadline_resolver: line=98, branch=95
# parler.rendering.renderer:      line=90, branch=85
# parler.pipeline.orchestrator:   line=85, branch=80
# parler.cli:                     line=85, branch=75

# ─── Hypothesis ──────────────────────────────────────────────────────────────

[tool.hypothesis]
max_examples = 200          # more thorough than default 100
deadline = 5000             # ms — generous for CI
suppress_health_check = ["too_slow"]
deriving_strategies = "best"
database = ".hypothesis"

# ─── Ruff (linting) ──────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["parler", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "SIM",      # flake8-simplify
    "PTH",      # flake8-use-pathlib
    "RUF",      # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # do not perform function calls in default arguments (Click)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N806", "S101", "S105", "S106"]  # test doubles use patched-class naming

# ─── Mypy ────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true

# ─── Mutmut (mutation testing) ───────────────────────────────────────────────

[tool.mutmut]
paths_to_mutate = "parler/"
backup = false
runner = "uv run pytest tests/unit/ -x -q --tb=no"
tests_dir = "tests/unit/"
# Target mutation score ≥ 80% for core modules
